# pharmacyManagementSystem

./: CMakeLists.txt  README.md  customer.c  customer.h  functions.c  functions.h  headers.h  main.c  pharmacist.c  pharmacist.h
customer/: customer.c  customer.h  customer.txt
pharmacist/: log.txt  medicine.txt  pharmacist.c  pharmacist.h  pharmacist.txt
